# bracketlib-roguelike-hecs

./: .gitignore  Cargo.toml  build-wasm.sh  run-wasm.sh
src/: cliopt.rs  color.rs  command.rs  components.rs  config.rs  consts.rs  damage_system.rs  despawn_entities_system.rs  gamelog.rs  glyph.rs  gui.rs  inventory.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  player.rs  prelude.rs  rect.rs  resource.rs  spawner.rs  tilemap.rs  visibility_system.rs
src/web/: index.html
