[package]
name = "bracketlib-book"
version = "0.1.0"
authors = ["Kris Scott <kscott91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bracket-lib = "0.8.2"
bracket-lib = { git = "https://github.com/amethyst/bracket-lib", rev = "927d2292b5e74dd6ef16b46bc9e40c815c36c8a0" }
hecs = "0.3.2"
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4.2"
structopt = "0.3"
thiserror = "1.0"
anyhow = "1.0"